AM_CFLAGS = @LUA_CFLAGS@ -DLUA_COMPAT_ALL

lib_LIBRARIES = ../../liblua.a

______liblua_a_SOURCES = \
 lapi.h     ldebug.h  llex.h     lopcodes.h  ltable.h   lualib.h \
 lauxlib.h  ldo.h     llimits.h  lparser.h   ltm.h      lundump.h \
 lcode.h    lfunc.h   lmem.h     lstate.h    luaconf.h  lvm.h \
 lctype.h   lgc.h     lobject.h  lstring.h   lua.h      lzio.h \
 lapi.c      lcorolib.c  ldump.c     llex.c      lopcodes.c  lstrlib.c \
 lauxlib.c   lctype.c    lfunc.c     lmathlib.c  loslib.c    ltable.c \
 lundump.c   lbaselib.c  ldblib.c    lgc.c       lmem.c      lparser.c \
 ltablib.c   lvm.c       lbitlib.c   ldebug.c    linit.c     loadlib.c \
 lstate.c    ltm.c       lzio.c      lcode.c     ldo.c       liolib.c \
 lobject.c   lstring.c
